<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="30dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkIn"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:text="@string/detail_chekin"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_qr"
            app:layout_constraintEnd_toStartOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/XXLargeText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkIn"
            tools:text="Название мероприятия" />

        <TextView
            android:id="@+id/date"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="12.329.3120" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/description"
            style="@style/NormalText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="awwwevw wefwevwwew\nwfefwewevvw\nwefwef\nwefwef" />

        <TextView
            android:id="@+id/place"
            style="@style/NormalText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="Место дворцовая площадь" />

        <TextView
            android:id="@+id/regUntil"
            style="@style/NormalText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/detail_register_until"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place"
            tools:text="Место дворцовая площадь" />

        <TextView
            android:id="@+id/regStatus"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regUntil"
            tools:text="@string/detail_you_are_sport" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/detail_you_are_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regStatus" />

        <TextView
            android:id="@+id/regTitle"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/detail_plan"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regStatus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/planButtonSport"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/detail_sport"
            app:layout_constraintEnd_toStartOf="@id/planButtonFun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regTitle" />

        <TextView
            android:id="@+id/regSportPoints"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/detail_sport_points"
            android:textColor="@color/colorPsbAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/planButtonSport"
            app:layout_constraintStart_toStartOf="@id/planButtonSport"
            app:layout_constraintTop_toBottomOf="@id/planButtonSport" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/planButtonFun"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_fun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/planButtonSport"
            app:layout_constraintTop_toBottomOf="@id/regTitle" />

        <TextView
            android:id="@+id/regFunPoints"
            style="@style/MediumText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/detail_fun_points"
            android:textColor="@color/colorPsbAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/planButtonFun"
            app:layout_constraintStart_toStartOf="@id/planButtonFun"
            app:layout_constraintTop_toBottomOf="@id/planButtonFun" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/regGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="regFunPoints, regSportPoints, regTitle, planButtonSport, planButtonFun" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
