<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp">

    <EditText
        android:id="@+id/search"
        android:layout_width="0px"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_search_background"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/my_events_search"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/optionsContainer"
        android:layout_width="0px"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/grayUltraLight"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search">

        <TextView
            android:id="@+id/optionDone"
            style="@style/SmallText"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/my_events_done"
            app:drawableTopCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/optionCalendar"
            style="@style/SmallText"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/my_events_calendar"
            app:drawableTopCompat="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/optionFav"
            style="@style/SmallText"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/my_events_fav"
            app:drawableTopCompat="@drawable/ic_star" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsList"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_marginTop="20dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>